--- a/API & DB/MarutiSuzuki.API/appsettings.json
+++ b/API & DB/MarutiSuzuki.API/appsettings.json
@@ -10,7 +10,7 @@
 		"Password": "password"
 	},
 	"ConnectionStrings": {
-		"DefaultConnection": "Server=DESKTOP-8JMJR2N\\SQLEXPRESS; Database=SuzukiDB; Trusted_connection=true"
+		"DefaultConnection": "Data Source=3.130.154.203;Initial Catalog=VMS; uid=sa;Pwd=master@5;Trusted_Connection=False; Integrated Security=False; MultipleActiveResultSets=True"
 	},
 	//"ConnectionStrings": {
 	//	"SQLEntityApiConnection": "Server=.\\SQLEXPRESS;Database=SuzukiDBW;Trusted_Connection=True;"
