--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.0.0",
     "admin-lte": "^3.2.0",
     "chart.js": "^3.8.2",
+    "jwt-decode": "^3.1.2",
     "ng2-charts": "^3.1.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
