--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^3.8.2",
     "jwt-decode": "^3.1.2",
     "ng2-charts": "^3.1.2",
+    "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.4.0",
     "sweetalert2": "^10.16.9",
     "tslib": "^2.3.0",
