--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "admin-lte": "^3.2.0",
+    "angular-animations": "^0.11.0",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.8.2",
     "jwt-decode": "^3.1.2",
     "ng2-charts": "^3.1.2",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-spinner": "^13.1.1",
     "rxjs": "~7.4.0",
     "sweetalert2": "^10.16.9",
     "tslib": "^2.3.0",
