--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular-animations": "^0.11.0",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.8.2",
+    "datalist-polyfill": "^1.25.0",
     "jwt-decode": "^3.1.2",
     "ng2-charts": "^3.1.2",
     "ngx-bootstrap": "^8.0.0",
