--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "admin-lte": "^3.2.0",
+    "admin-lte": "3.2",
     "angular-animations": "^0.11.0",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.8.2",
