--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jwt-decode": "^3.1.2",
     "ng2-charts": "^3.1.2",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-pagination": "^5.1.1",
     "ngx-spinner": "^13.1.1",
     "rxjs": "~7.4.0",
     "sweetalert2": "^10.16.9",
