--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "chart.js": "^3.8.2",
     "datalist-polyfill": "^1.25.0",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "ng2-charts": "^3.1.2",
+    "ngx-angular8-sweetalert2": "^9.8.2",
     "ngx-bootstrap": "^8.0.0",
     "ngx-pagination": "^5.1.1",
     "ngx-spinner": "^13.1.1",
     "rxjs": "~7.4.0",
     "sweetalert2": "^10.16.9",
     "tslib": "^2.3.0",
+    "x2js": "^3.4.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -38,6 +41,7 @@
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
+    "@types/lodash": "^4.14.188",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
