--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@ng-select/ng-select": "^8.1.1",
     "admin-lte": "3.2",
     "angular-animations": "^0.11.0",
     "bootstrap": "^5.2.0",
@@ -26,6 +27,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "ng2-charts": "^3.1.2",
+    "ng2-search-filter": "^0.5.1",
     "ngx-angular8-sweetalert2": "^9.8.2",
     "ngx-bootstrap": "^8.0.0",
     "ngx-pagination": "^5.1.1",
