--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^5.2.0",
     "chart.js": "^3.8.2",
     "datalist-polyfill": "^1.25.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "ng2-charts": "^3.1.2",
