--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sweetalert2": "^10.16.9",
     "tslib": "^2.3.0",
     "x2js": "^3.4.3",
+    "xlsx": "^0.17.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
